# burstFit

./: CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml  burstFitLib.py
burstFit/: BayesianBinner.h  BayesianBlocker.h  BurstModel.h  NegativeStat.h  ProfileFitter.h
cmt/: requirements
data/: binData1039.fits  binData1406.fits  binData2193.fits  binData2197.fits  binData2387.fits  binData2665.fits  binData2711.fits  binData2863.fits  binData3256.fits  binData3257.fits  binData5387.fits  binData5415.fits  binData6147.fits  binData6414.fits  binData6504.fits  binData764.fits
doc/: release.notes
pfiles/: gtburstfit.par
src/: BayesianBinner.cxx  BayesianBlocker.cxx  BurstModel.cxx  NegativeStat.cxx  ProfileFitter.cxx  mainpage.h
src/gtburstfit/: gtburstfit.cxx
src/test/: .test_burstFit.cxx.swp  test_burstFit.cxx
